# Astro_FITS_VTK

./: Astro_FITS_VTK.pro  Astro_FITS_VTK.pro.user.56bf0b3  Astro_FITS_VTK.pro.user.96e01ad  Astro_FITS_VTK.pro.user.b70e49e.2.7pre1  CMakeLists.txt  CMakeLists.txt.user (copy).bca581f  InfoBarDialog.ui  OrientationAxes.h  PlaneSelection.h  PointerTracker.h  README.md  Sample.cpp  Sample.h  ScalarBar.h  XYHighlightSelection.cpp  XYHighlightSelection.h  ZHighlightSelection.h  fits_results.cpp  fits_results.h  infobardialog.h  infotabdialog.cpp  infotabdialog.ui  leapdialog.ui  main.cpp  main.h  mainwindow.cpp  mainwindow.cpp.autosave  mainwindow.h  mainwindow.h.autosave  mainwindow.ui  mainwindow.ui.autosave  processfile.cpp  processfile.h  sliceDialog.cpp  sliceDialog.h  sliceDialog.ui  subVolume.cpp  subVolume.h  subVolume.ui  subvolumedialog.cpp  (+9 more)
Hands/: HandModel.cpp  HandModel.h  Hands.pri  handRenderer.cpp  handRenderer.h  vtkLeapHandWidget.cpp  vtkLeapHandWidget.h
Icons/: Icons.qrc
InfoDlg/: InfoDlg.pro  infobardialog.cpp  infobardialog.h
Leap/: Leap.pri  Leap.pri~  README.mingw.v2  Sample.cpp  leapdialog.cpp  leapdialog.h  leapdialog.ui  vtkLeapMarkerWidget.cxx  vtkLeapMarkerWidget.h
Slicing/: Slicing.pri  Slicing.pri~  sliceDialog.cpp  sliceDialog.h  sliceDialog.ui  vtkimplicitcustomplanewidget.cpp  vtkimplicitcustomplanewidget.h
SubVolume/: SubVolume.pri  XYHighlightSelection.h  ZHighlightSelection.h  subvolumedialog.cpp  subvolumedialog.h  subvolumedialog.ui  vtkCustomBoxWidget.cpp  vtkCustomBoxWidget.h
System/: OrientationAxes.h  ScalarBar.h  System.pri  System.pri~  vtkfitsreader.cpp  vtkfitsreader.h
Touch/: Touch.pri  vtkTouchWidget.cpp  vtkTouchWidget.h
Usability/: Usability.pri  Usability.pri~  UserTesting.cpp  UserTesting.h  UserTesting.ui  countDialog.cpp  countDialog.h  countdialog.ui  counterbalance.txt  surveydialog.cpp  surveydialog.h  surveydialog.ui  usertestdialog.cpp  usertestdialog.h  usertestdialog.ui
bin-dbg/: Astro_FITS_VTK  OMC.FITS
build-dbg/: Astro_FITS_VTK.cbp  CMakeCache.txt  Makefile  cmake_install.cmake  (+6 more)
(+10 files in other folders)
